// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating snapshot: 1 star 1`] = `
<div
  className="rating"
>
  <div
    className="stars stars_1"
  >
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
  </div>
  <div
    className="value"
  >
    1
  </div>
</div>
`;

exports[`Rating snapshot: 2 stars 1`] = `
<div
  className="rating"
>
  <div
    className="stars stars_2"
  >
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
  </div>
  <div
    className="value"
  >
    2
  </div>
</div>
`;

exports[`Rating snapshot: 3 stars 1`] = `
<div
  className="rating"
>
  <div
    className="stars stars_3"
  >
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
  </div>
  <div
    className="value"
  >
    3
  </div>
</div>
`;

exports[`Rating snapshot: 4 stars 1`] = `
<div
  className="rating"
>
  <div
    className="stars stars_4"
  >
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
  </div>
  <div
    className="value"
  >
    4
  </div>
</div>
`;

exports[`Rating snapshot: 5 stars 1`] = `
<div
  className="rating"
>
  <div
    className="stars stars_4"
  >
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
  </div>
  <div
    className="value"
  >
    4
  </div>
</div>
`;

exports[`Rating snapshot: without rating 1`] = `
<div
  className="rating"
>
  <div
    className="stars stars_0"
  >
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
    <div
      className="star"
    />
  </div>
</div>
`;
